Fix: second part